# multimodal-ranked-system

multimodal-rag-system/: .env.example  main.py  pyproject.toml  schema.sql
multimodal-rag-system/src/api/v1/agents/: __init__.py  agent.py
multimodal-rag-system/src/api/v1/routes/: query.py
multimodal-rag-system/src/api/v1/schemas/: query_schema.py
multimodal-rag-system/src/api/v1/services/: query_service.py  query_service_impl.py
multimodal-rag-system/src/api/v1/tools/: __init__.py  fts_tool.py  hybrid_tool.py  vector_tool.py
multimodal-rag-system/src/core/: db.py
multimodal-rag-system/src/ingestion/: docling_parser.py  ingestion.py
